--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -12,7 +12,7 @@ const { filled = false } = Astro.props;
 	'rounded-full',
 	'border-4',
 	'border-sky-700',
-	'text-sky-700',
+	{'text-sky-700': !filled},
 	{'text-gray-50': filled},
 	'text-lg',
 	'font-bold',
