--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import '@fontsource/lato';
 import Nav from '../components/Nav.astro';
+import Footer from '../components/Footer.astro';
 
 interface Props {
 	title: string;
@@ -22,5 +23,6 @@ const { title } = Astro.props;
 	<body>
 		<Nav />
 		<slot />
+		<Footer />
 	</body>
 </html>
